[package]
name = "tipb"
version = "0.0.1"
edition = "2018"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "bytes", "lazy_static", "protobuf-build/prost-codec"]

[lib]
name = "tipb"

[dependencies]
protobuf = "2"
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
bytes = { version = "0.4", optional = true }
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
protobuf-build = { git = "https://github.com/tikv/protobuf-build.git", rev = "54c089895e4bf42481c2af46ebf73295c0e5d6b9", default-features = false }
