[package]
name = "tipb"
version = "0.0.1"
edition = "2018"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/prost-codec", "grpcio/prost-codec"]

[lib]
name = "tipb"

[dependencies]
protobuf = "=2.8.0"
prost = { version = "0.9", optional = true }
prost-derive = { version = "0.9", optional = true }
lazy_static = { version = "1.3", optional = true }
futures = "0.3.5"
grpcio = { version = "0.10.0", default-features = false }

[build-dependencies]
protobuf-build = { version = "0.13", default-features = false }

[patch.crates-io]
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev="82b49fea7e696fd647b5aca0a6c6ec944eab3189" }
